--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
+        <p>Handmade Card Maker 💝| Spreading Happiness & Smiles ✨ <a href="https://www.facebook.com/ritu2104/">Visit my Facebook Page</a>,like and follow to see more of these creations-by-heart! :)</p>
       </div>
     </footer>
 
