--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
-        <p>Handmade Card Maker 💝| Spreading Happiness & Smiles ✨<br>
-          <a href="https://www.facebook.com/ritu2104/">Visit my Facebook Page</a>,like and follow to see more of these creations-by-heart! :)</p>
+        <p align="center">Handmade Card Maker 💝| Spreading Happiness & Smiles ✨<br></p>
+          <a href="https://www.facebook.com/ritu2104/">Visit my Facebook Page</a>,like and follow to see more of these creations-by-heart! :)
       </div>
     </footer>
 
