--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           <div class="row">
             <div class="col-sm-8 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-muted">When I am inspired, I draw. When inspired by what I drew, I share. Thanks for looking!</p>
+              <p class="text-muted">"When I am inspired, I draw. When inspired by what I drew, I share." Thanks for looking!</p>
             </div>
           </div>
         </div>
       </div>
       <div class="navbar navbar-dark bg-dark">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand">Album</a>
+          <a href="#" class="navbar-brand">Creations By Heart Homepage</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
