--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Ritika Gupta</h1>
+          <img align="center" href="images/banner.png">
+          <h3 class="jumbotron-heading">Ritika Gupta</h1>
           <p class="lead text-muted">Art Portfolio</p>
         </div>
       </section>
