--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 
       <div class="album text-muted">
         <div class="container">
-          <center>Here's few of my designed handmade cards! <3 </center>
-<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F939339976532806%2F&show_text=false&width=734&height=404&appId" width="45%" height="404" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>        
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F551468542183098%2F&show_text=false&width=734&height=404&appId" width="45%" height="404" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+          <center>Here's few of my designed handmade cards! <3 </center><br>
+<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F939339976532806%2F&show_text=false&width=734&height=404&appId" width="45%" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>        
+          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F551468542183098%2F&show_text=false&width=734&height=404&appId" width="45%" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
           <div class="row">
-            <center>Other creations :)</center>
+            <center>Other creations :)</center><br><br>
             <div class="card">
               <img src="images/Artworks-Ritu/1.jpeg" alt="image 2017" style="width:100%"  
                    data-toggle="modal" data-target="#myModal">
