--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <img align="center" href="images/banner.png">
+          <img align="center" src="images/banner.png">
           <h3 class="jumbotron-heading">Ritika Gupta</h1>
           <p class="lead text-muted">Art Portfolio</p>
         </div>
@@ -77,7 +77,7 @@
 <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F939339976532806%2F&show_text=false&width=734&height=404&appId" width="45%" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>        
           <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F551468542183098%2F&show_text=false&width=734&height=404&appId" width="45%" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
           <div class="row">
-            <center>Other creations :)</center><br><br>
+            <p align="center">Other creations :)</p><br><br>
             <div class="card">
               <img src="images/Artworks-Ritu/1.jpeg" alt="image 2017" style="width:100%"  
                    data-toggle="modal" data-target="#myModal">
