--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <img align="center" src="images/banner.png">
+          <img align="center" width="100%" src="images/banner.png">
           <h3 class="jumbotron-heading">Ritika Gupta</h1>
-          <p class="lead text-muted">Art Portfolio</p>
+          <p class="lead text-muted">Art&Craft Portfolio</p>
         </div>
       </section>
 
       <div class="album text-muted">
         <div class="container">
-          <center>Here's few of my designed handmade cards! <3 </center><br>
+          <center>Here's a peek into few of my designed handmade cards! <3 </center><br>
           <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F939339976532806%2F&show_text=false&width=734&height=404&appId" width="45%" height="220" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>        
           <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F551468542183098%2F&show_text=false&width=734&height=404&appId" width="45%" height="220" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
           <p align="center">Other creations :)</p><br><br>
