--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <link rel="icon" href="images/favicon.ico">
 
     <title>Creations-by-Heart Homepage!</title>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <!-- Bootstrap core CSS -->
    <!-- Latest compiled and minified CSS -->
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+   <link rel="stylesheet" href="video_carousel/ninja-slider.css">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> -->
     <!-- Custom styles for this template -->
+    <script src="video_carousel/ninjaVideoPlugin.js"></script>
+    <script src="video_carousel/ninja-slider.js"></script>
     <link href="album.css" rel="stylesheet">
   </head>
 
@@ -74,9 +80,96 @@
       <div class="album text-muted">
         <div class="container">
           <center>Here's a peek into few of my designed handmade cards! <3 </center><br>
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F939339976532806%2F&show_text=false&width=734&height=404&appId" width="45%" height="220" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>        
-          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F551468542183098%2F&show_text=false&width=734&height=404&appId" width="45%" height="220" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
-          <p align="center">Other creations :)</p><br><br>
+
+            <div id='ninja-slider'>
+              <div class="slider-inner">
+                  <ul>
+                      <!-- <li><a class="ns-img" href="img/1.jpg"></a></li> -->
+                      <li>
+                          <div class="video">
+                            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F4803469769678432%2F&show_text=false&width=734&appId=2142972556031965&height=415" width="734" height="415" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                       
+                          </div>
+                      </li>
+                      <li>
+                          <div class="video">
+                            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F180589523577704%2F&show_text=false&width=734&appId=2142972556031965&height=415" width="734" height="415" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                   
+                          </div>
+                      </li>
+                      <li>
+                        <div class="video">
+                          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F4970505069641843%2F&show_text=false&width=734&appId=2142972556031965&height=734" width="734" height="734" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                        </div>
+                    </li>
+                    <li>
+                      <div class="video">
+                        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F2774555082863695%2F&show_text=false&width=734&appId=2142972556031965&height=1277" width="734" height="1277" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                  </li>
+                  <li>
+                    <div class="video">
+                      <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F326697298404530%2F&show_text=false&width=734&appId=2142972556031965&height=404" width="734" height="404" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                <li>
+                  <div class="video">
+                    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F551468542183098%2F&show_text=false&width=734&appId=2142972556031965&height=404" width="734" height="404" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+                  </li>
+                  </ul>
+                  <div class="fs-icon"></div>
+              </div>
+          </div>
+          
+<p>
+  <br><br>
+</p>          <p align="center">Other creations :)</p><br><br>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="images/carousel/1.jpg" alt="First slide" height="550px" width="50px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel/2.jpg" alt="Second slide" height="550px" width="50px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel/3.jpg" alt="Third slide" height="550px" width="50px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel/4.jpg" alt="First slide" height="550px" width="50px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel/5.jpg" alt="Second slide" height="550px" width="50px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel/6.jpg" alt="Third slide" height="550px" width="50px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel/7.jpg" alt="First slide" height="550px" width="50px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel/8.jpg" alt="Second slide" height="550px" width="50px">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/carousel/9.jpg" alt="Third slide" height="550px" width="50px">
+              </div>
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
             <div class="row">
             <div class="card">
               <img src="images/Artworks-Ritu/1.jpeg" alt="image 2017" style="width:100%"  
