--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
    <link rel="stylesheet" href="video_carousel/ninja-slider.css">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"> -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <script src="video_carousel/ninjaVideoPlugin.js"></script>
+    <!-- <script src="video_carousel/ninjaVideoPlugin.js"></script> -->
     <script src="video_carousel/ninja-slider.js"></script>
     <link href="album.css" rel="stylesheet">
   </head>
@@ -172,32 +172,32 @@
 
             <div class="row">
             <div class="card">
-              <img src="images/Artworks-Ritu/1.jpeg" alt="image 2017" style="width:100%"  
+              <img src="images/carousel/4.jpg" alt="image 2017" style="width:100%;height:400px"  
                    data-toggle="modal" data-target="#myModal">
-              <p class="card-text">Corona 2019</p>
+              <p class="card-text">Pop Art</p>
             </div>
             <div class="card">
-              <img src="images/Artworks-Ritu/2.jpeg" alt="image 2017" style="width:100%"  
+              <img src="images/Artworks-Ritu/2.jpeg" alt="image 2017" style="width:100%;height:400px"  
                data-toggle="modal" data-target="#myModal">
               <p class="card-text">Idol</p>
             </div>
             <div class="card">
-              <img src="images/Artworks-Ritu/3.jpeg" alt="image 2017" style="width:100%"
+              <img src="images/Artworks-Ritu/3.jpeg" alt="image 2017" style="width:100%;height:400px"
                    data-toggle="modal" data-target="#myModal">
               <p class="card-text">Ganpati Bappa!</p>            
             </div>
              <div class="card">
-              <img src="images/Artworks-Ritu/4.jpeg" alt="image 2017" style="width:100%"  
+              <img src="images/Artworks-Ritu/4.jpeg" alt="image 2017" style="width:100%;height:400px"  
                    data-toggle="modal" data-target="#myModal">
               <p class="card-text">Stop Child Labour!</p>
             </div>
             <div class="card">
-              <img src="images/Artworks-Ritu/5.jpeg" alt="image 2017" style="width:100%"  
+              <img src="images/Artworks-Ritu/5.jpeg" alt="image 2017" style="width:100%;height:400px"  
                data-toggle="modal" data-target="#myModal">
-              <p class="card-text">Face 2 2017</p>
+              <p class="card-text">Nerd</p>
             </div>
             <div class="card">
-              <img src="images/Artworks-Ritu/6.jpeg" alt="image 2017" style="width:100%"
+              <img src="images/Artworks-Ritu/6.jpeg" alt="image 2017" style="width:100%;height:400px"
                    data-toggle="modal" data-target="#myModal">
               <p class="card-text">Astro!</p>            
             </div>
