--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
           <p class="lead text-muted">Art&Craft Portfolio</p>
         </div>
       </section>
-
+      <div>
+         <script async src="https://walls.io/js/wallsio-widget-1.2.js" data-wallurl="https://my.walls.io/sybwc?nobackground=1&amp;show_header=0" data-title="My social wall" data-width="100%" data-autoheight="1" data-height="800" data-lazyload="1"></script>
+      </div>
       <div class="album text-muted">
         <div class="container">
           <center>Here's a peek into few of my designed handmade cards! <3 </center><br>
