--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico">
 
-    <title>Creations-by-Heart Homepage!</title>
+    <title>Slice of Art by Ritika</title>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <!-- Bootstrap core CSS -->
@@ -52,14 +52,20 @@
           <div class="row">
             <div class="col-sm-8 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-muted">"When I am inspired, I draw. When inspired by what I drew, I share." Thanks for looking!</p>
+              <p class="text-muted">αят ωιтн α νιвє
+                <br>Handmade with love❤
+                <br>Enjoy the little things✨
+                <br>Spreading love & joy❣
+                <br>Amritsar,Punjab
+                <br>Shipping 🌍 Customizations🌈
+                <br>DM for Collaborations</p>
             </div>
           </div>
         </div>
       </div>
       <div class="navbar navbar-dark bg-dark">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand">Creations By Heart Homepage</a>
+          <a href="#" class="navbar-brand">Slice of Art by Ritika</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -77,43 +83,11 @@
         </div>
       </section>
       <div>
+          <center>Here's a peek into few of my designed handmade cards! <3 </center><br>
          <script async src="https://walls.io/js/wallsio-widget-1.2.js" data-wallurl="https://my.walls.io/sybwc?nobackground=1&amp;show_header=0" data-title="My social wall" data-width="100%" data-autoheight="1" data-height="800" data-lazyload="1"></script>
       </div>
-      <div class="album text-muted">
-        <div class="container">
-          <center>Here's a peek into few of my designed handmade cards! <3 </center><br>
-
-            <div id='ninja-slider'>
-              <div class="slider-inner">
-                  <ul>
-                      <!-- <li><a class="ns-img" href="img/1.jpg"></a></li> -->
-                      <li>
-                          <div class="video">
-                            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F4803469769678432%2F&show_text=false&width=734&appId=2142972556031965&height=415" width="734" height="415" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                       
-                          </div>
-                      </li>
-                      <li>
-                          <div class="video">
-                            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F180589523577704%2F&show_text=false&width=734&appId=2142972556031965&height=415" width="734" height="415" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                   
-                          </div>
-                      </li>
-                      <li>
-                        <div class="video">
-                          <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F4970505069641843%2F&show_text=false&width=734&appId=2142972556031965&height=734" width="734" height="734" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                        </div>
-                    </li>
-                    <li>
-                      <div class="video">
-                        <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F2774555082863695%2F&show_text=false&width=734&appId=2142972556031965&height=1277" width="734" height="1277" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                  </li>
-                  <li>
-                    <div class="video">
-                      <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F326697298404530%2F&show_text=false&width=734&appId=2142972556031965&height=404" width="734" height="404" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>                <li>
-                  <div class="video">
-                    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fritu2104%2Fvideos%2F551468542183098%2F&show_text=false&width=734&appId=2142972556031965&height=404" width="734" height="404" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
-                  </li>
-                  </ul>
-                  <div class="fs-icon"></div>
-              </div>
-          </div>
+    
+ 
           
 <p>
   <br><br>
