--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <a href="#">Back to top</a>
         </p>
         <p align="center">Handmade Card Maker 💝| Spreading Happiness & Smiles ✨<br></p>
-          <center><a href="https://www.facebook.com/ritu2104/">Visit my Facebook Page</a>,like and follow to see more of these creations-by-heart! :)</center>
+          <center><a href="https://www.facebook.com/slice.of.art.by.ritika/"> Visit my Facebook Page</a>,like and follow to see more of these creations-by-heart! :)</center>
       </div>
     </footer>
 
