--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- Bootstrap core CSS -->
    <!-- Latest compiled and minified CSS -->
    <link rel="stylesheet" href="video_carousel/ninja-slider.css">
+   <link rel="stylesheet" href="css/footer.css">
+
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -94,7 +96,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <img align="center" width="100%" src="images/banner.png">
+          <img align="center" width="30%" src="images/logo.jpg">
           <h3 class="jumbotron-heading">Ritika Gupta</h1>
           <p class="lead text-muted">Art&Craft Portfolio</p>
         </div>
@@ -219,15 +221,26 @@
        
  </main>
 
-    <footer class="text-muted">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
-        <p align="center">Handmade Card Maker 💝| Spreading Happiness & Smiles ✨<br></p>
-          <center><a href="https://www.facebook.com/slice.of.art.by.ritika/"> Visit my Facebook Page</a>,like and follow to see more of these creations-by-heart! :)</center>
-      </div>
-    </footer>
+   
+ <section id="lab_social_icon_footer">
+<!-- Include Font Awesome Stylesheet in Header -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="container">
+<center>For more personalised gift options, follow us here :</center> <br>
+  <div class="text-center center-block">
+              <a href="https://www.facebook.com/slice.of.art.by.ritika" target="_blank"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+	            <a href="https://instagram.com/slice.of.art.by.ritika" target="_blank"><i id="social-tw" class="fa fa-instagram fa-3x social"></i></a>
+	            <a href="https://g.page/r/CfCDI2fBWANfEAE" target="_blank"><i id="social-gp" class="fa fa-google fa-3x social"></i></a>
+              <a href="https://www.youtube.com/channel/UCv5QCxM9NYuM3nefpiBjClQ" target="_blank"><i id="social-yt" class="fa fa-youtube fa-3x social"></i></a>
+	            <a href="http://sliceof.art" target="_blank"><i id="social-wp" class="fa fa-wordpress fa-3x social"></i></a>
+
+              <a href="mailto:utgarg1993@gmail.com" target="_blank"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+    </div>
+    <br>
+    <center>Copyright © 2022 Slice Of Art by Ritika</center>
+</div>
+</section>
+      <!-- Section: Basic example 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
